2011-07-08  Murray Cumming  <murrayc@murrayc.com>

	Details: Do not navigate past the last row.

	* glom/mode_data/datawidget/treemodel_db.[h|cc]: get_last_row(): 
	Document that this never returns the placeholder row, and make sure that it 
	does not. There was a typo that --ed the wrong variable.
	* glom/mode_data/db_adddel/db_adddel.[h|cc]: get_last_row(): 
	Document that this never returns the placeholder row.
	get_is_placeholder_row(): Remove an illogical call to is_last_row().
	get_count(): Remove an illogical check to see whether the last row is the 
	placeholder row.
	* glom/utility_widgets/adddel/adddel.h: get_last_row(): Document that this 
  similarly-APIed widget has different behaviour.
  
  This stops the user from being taken to an empty record when clicking Last, 
  or when clicking Next to the end.
  Bug #526115 comment #25 (Michael Hasselmann)

2011-07-08  Murray Cumming  <murrayc@murrayc.com>

	DbAddDel: Remove unnecessary virtual keywords. 

	* glom/mode_data/db_adddel/db_adddel.h: These methods are not meant to 
	be overridden by anything.

1.19.6:

2011-07-07  Murray Cumming  <murrayc@murrayc.com>

	About Box: Add a logo.

	* glom/application.cc: Use set_logo() though this only appears in the title 
	bar for some reason.

2011-07-07  Murray Cumming  <murrayc@murrayc.com>

	Really fix the About Box.

	* glom/application.cc: Add the Help menu itself, and use set_program_name() 
	instead of set_name().

2011-07-07  Murray Cumming  <murrayc@murrayc.com>

	Improve the About box.

	* glom/application.[h|cc]:
	* glom/bakery/app.[h|cc]:
	* glom/bakery/app_withdoc_gtk.[h|cc]: Move the help menu out of the 
	Bakery class, doing it all in our derived Application class, to give us 
	more control over the GtkAboutDialog. We do not need the abstraction any 
	more.
	This restores the application description, which was probably lost when 
	converting to AboutDialog.
	
2011-07-06  Murray Cumming  <murrayc@murrayc.com>
